<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true">

    <data>

        <variable
            name="AllRingtonesViewModel"
            type="com.example.naturing.viewmodels.AllRingtonesViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RingtonesScreenActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/kitaplikButon"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/kitaplik"
                    android:backgroundTintMode="add"
                    android:drawableTop="@drawable/toolbar_playlist"
                    android:onClick="@{() -> AllRingtonesViewModel.kitaplikToolbarOnClick()}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cikisButon"
                    android:layout_width="50dp"
                    android:paddingTop="30dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/toolbar_exit"
                    android:onClick="@{() -> AllRingtonesViewModel.exitToolbarOnClick()}" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ringtoneSearch"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:padding="3dp"
            app:endIconDrawable="@drawable/ringtone_search"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarHomeScreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ringtoneSearchBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/homeFreeRingtonesTV"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ucretsiz_sesler"
            android:textColor="#150050"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ringtoneSearch"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="@+id/ringtoneSearch"
            app:layout_constraintTop_toBottomOf="@+id/ringtoneSearch" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/anaSayfaUcretsizRecyclerView"
            android:layout_width="383dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/homeFreeRingtonesTV"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/homeFreeRingtonesTV"
            app:layout_constraintTop_toBottomOf="@+id/homeFreeRingtonesTV" />


        <TextView
            android:id="@+id/anaSayfaUcretsizlerTamListeTV"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:onClick="@{() -> AllRingtonesViewModel.ucretsizSayfaClick()}"
            android:text="@string/tum_ucretsiz"
            android:textColor="#3F0071"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretsizRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretsizRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretsizRecyclerView" />

        <TextView
            android:id="@+id/homePremiumRingtonesTV"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ucretli_sesler"
            android:textColor="#150050"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretsizlerTamListeTV"
            app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretsizlerTamListeTV"
            app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretsizlerTamListeTV" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/anaSayfaUcretliRecyclerView"
            android:layout_width="383dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/homePremiumRingtonesTV"
            app:layout_constraintStart_toStartOf="@+id/homePremiumRingtonesTV"
            app:layout_constraintTop_toBottomOf="@+id/homePremiumRingtonesTV" />

        <TextView
            android:id="@+id/anaSayfaUcretlilerTamListeTV"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:gravity="end"
            android:onClick="@{() -> AllRingtonesViewModel.ucretliSayfaClick()}"
            android:text="@string/tum_ucretli"
            android:textColor="#3F0071"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretliRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretliRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretliRecyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

<!--



    <?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:bind="http://schemas.android.com/tools"
xmlns:tools="http://schemas.android.com/tools"
tools:viewBindingIgnore="true">

<data>

    <variable
        name="AllRingtonesViewModel"
        type="com.example.naturing.viewmodels.AllRingtonesViewModel" />

</data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RingtonesScreenActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kitaplikButon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@drawable/toolbar_playlist"
                android:onClick="@{() -> AllRingtonesViewModel.kitaplikToolbarOnClick()}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cikisButon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/toolbar_exit"
                android:onClick="@{() -> AllRingtonesViewModel.exitToolbarOnClick()}" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ringtoneSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:padding="3dp"
        app:endIconDrawable="@drawable/ringtone_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarHomeScreen">

        &lt;!&ndash;android:maxLength="13"&ndash;&gt;
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ringtoneSearchBar"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/homeFreeRingtonesTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Ücretsiz Sesler"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ringtoneSearch"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="@+id/ringtoneSearch"
        app:layout_constraintTop_toBottomOf="@+id/ringtoneSearch" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/anaSayfaUcretsizRecyclerView"
        android:layout_width="383dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/homeFreeRingtonesTV"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/homeFreeRingtonesTV"
        app:layout_constraintTop_toBottomOf="@+id/homeFreeRingtonesTV" />


    <TextView
        android:id="@+id/anaSayfaUcretsizlerTamListeTV"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:onClick="@{() -> AllRingtonesViewModel.ucretsizSayfaClick()}"
        android:text="Tüm ücretsiz sesleri görmek için tıklayın"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretsizRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretsizRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretsizRecyclerView" />

    <TextView
        android:id="@+id/homePremiumRingtonesTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Ücretli Sesler"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretsizlerTamListeTV"
        app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretsizlerTamListeTV"
        app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretsizlerTamListeTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/anaSayfaUcretliRecyclerView"
        android:layout_width="383dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/homePremiumRingtonesTV"
        app:layout_constraintStart_toStartOf="@+id/homePremiumRingtonesTV"
        app:layout_constraintTop_toBottomOf="@+id/homePremiumRingtonesTV" />

    <TextView
        android:id="@+id/anaSayfaUcretlilerTamListeTV"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:gravity="end"
        android:onClick="@{() -> AllRingtonesViewModel.ucretliSayfaClick()}"
        android:text="Tüm ücretli sesleri görmek için tıklayın"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/anaSayfaUcretliRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/anaSayfaUcretliRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/anaSayfaUcretliRecyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
-->
